fix: bug 1992 tags input misaligned

--- a/src/components/TagsInput.css
+++ b/src/components/TagsInput.css
@@ -52,7 +52,7 @@
 }
 
 .cl-tags__form {
-    margin-top: 5px;
+    margin-top: 8px;
     margin-left: 5px;
 }
 
